2002-06-27  Darin Adler  <darin@apple.com>

	- fixed 2973342 -- copied text seems to have an extra blank line between paragraphs

        * khtml/khtml_part.cpp: (KHTMLPart::selectedText):
	Get rid of code that was adding an extraneous newline at the
	ends of various types of nodes, including <P>

2002-06-27  Darin Adler  <darin@apple.com>

	Fix Java. My changes this morning broke it.

        * khtml/rendering/render_applet.cpp: (RenderApplet::processArguments):
	Re-add required APPLE_CHANGES. Pass arguments to KJavaAppletWidget::processArguments.
        * kwq/khtml/java/kjavaappletwidget.h: Added KJavaAppletWidget::processArguments.
        * kwq/KWQKJavaAppletWidget.mm: (KJavaAppletWidget::processArguments): Added.

	Some QFont fixes.

        * kwq/qt/qfont.h: Remove unused setPixelSizeFloat.
        * kwq/KWQFont.mm: Change to keep family names in a set. Since there are only
	a small number of family names ever encountered, this is a bit of a memory win.
        (QFont::QFont): Don't retain the family name.
        (QFont::~QFont): Don't release the family name.
        (QFont::setFamily): Put the family name in a set, and use the one from the set.
        (QFont::operator=): Don't retain or release.
        (QFont::operator==): Use == to compare the name.

=== Alexander-10 ===

2002-06-27  Richard Williamson  <rjw@apple.com>

        Method name changes in preparation for fixing
        TextSlave::checkSelectionPoint().
        
        * kwq/WebCoreTextRenderer.h:

2002-06-27  Richard Williamson  <rjw@apple.com>

        Removed calls to old method.
        
        * kwq/KWQPainter.mm:
        (QPainter::drawText):
        * kwq/WebCoreTextRenderer.h:
        Removed old methods.

2002-06-27  Darin Adler  <darin@apple.com>

        * khtml/rendering/render_applet.cpp: Remove include of <iostream.h> to avoid bloat.
        (RenderApplet::RenderApplet): Remove APPLE_CHANGES.
        (RenderApplet::processArguments): Remove APPLE_CHANGES.